5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1602_1014.log
== TEST (2019-03-20 18:56:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input(valor da venda))
print(round(reais, 2))
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input(valor da venda))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input(valor da venda))
print(round(reais, 2))
-- ERROR:
File "XXXX", line 4
    TotalDeVendas = int(input(valor da venda))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("valor da venda?"))
print(round(reais, 2))
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
print(round(reais, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = 200 * (30/100)
print(round(reais, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(reais, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.1031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.14886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.177554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:03:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.170056
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:03:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.139725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 4, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:03:53) 
-- CODE:
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME:
0.196121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:54) 
-- CODE:
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:00) 
-- CODE:
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:17) 
-- CODE:
TotalDeVendas = int(input("valor da venda?"))
lucro = TotalDeVendas * (30/100)
print(round(lucro, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:04) 
-- CODE:
TotalDeVendas = int(input("valor da venda?"))
print(round(TotalDeVendas * 0.3, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:07) 
-- CODE:
TotalDeVendas = int(input("valor da venda?"))
print(round(TotalDeVendas * 0.3, 2))

-- EXECUTION TIME:
0.142292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    TotalDeVendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:26) 
-- CODE:
TotalDeVendas = float(input("valor da venda?"))
print(round(TotalDeVendas * 0.3, 2))

-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:28) 
-- CODE:
TotalDeVendas = float(input("valor da venda?"))
print(round(TotalDeVendas * 0.3, 2))

-- EXECUTION TIME:
0.144732
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:48) 
-- CODE:
TotalDeVendas = float(input("valor da venda?"))
print(round(TotalDeVendas * 0.3, 2))

-- EXECUTION TIME:
0.150608
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:29:27) 
-- CODE:
TotalDeVendas = float(input("valor da venda?"))
print(round(TotalDeVendas * 0.3, 2))

-- EXECUTION TIME:
0.141325
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
